selfhost/test/typechecker/funcdecl/error_invalid_param_type.out
Error at %FILE_NAME%:1:13
Unknown type 'Bogus'
  |  func foo(f: Bogus) {}
                 ^
No type with that name is visible in current scope
